# shop_scout

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.prod.yaml  docker-compose.yaml  hello.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  migrate.sh  pyproject.toml
backend/data/: stores.json
backend/src/: config.py  main.py  static.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 97c3b9fbf8a3_initial.py
backend/src/api/: routes.py
backend/src/api/routers/: countries.py  index.py  shops.py
backend/src/core/: config.py  db.py  logging_config.py
backend/src/dto/: category.py  country.py  discount.py  img.py  logo.py  models.py  nutrition_facts.py  own_brand_data.py  price_wholesale.py  producer.py  product.py  quantity.py  restrictions.py  shop.py
backend/src/models/: models.py
backend/src/pipeline/: run_pipeline.py
backend/src/pipeline/extractor/: client.py  extractor.py
backend/src/pipeline/loader/: loader.py
backend/src/pipeline/transform/: transform.py
backend/src/scripts/: generate_products_csv.py
backend/src/services/: fetch_stores.py  search_products.py
backend/src/tests/: test_basic.py  test_extractor.py  test_transform.py
backend/tests/: test_basic.py
docs/: requirements.md
docs/uml/: data_pipeline.mermaid
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/api/: countries.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: BannerWithForm.tsx  CountriesSelect.tsx  CountryForm.tsx  CustomButtonGroup.tsx  CustomSelect.tsx  HeroSection.tsx  MainForm.tsx  ProductsList.tsx  ResultTable.tsx
frontend/src/components/AboutApp/: AboutAppItem.tsx  AboutAppList.tsx
frontend/src/components/AppFeatures/: AppFeatures.tsx  MainInfo.tsx  ShortInfoItem.tsx  ShortInfoList.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Header/: Header.tsx  Logo.tsx  NavBar.tsx
frontend/src/components/MainActions/: MainActionButton.tsx  MainActions.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/services/: countries.ts
frontend/src/styles/: styles.tsx  theme.ts
frontend/src/types/: buttons.ts
frontend/src/utils/: httpClient.ts
