[project]
name = "shop-scout"
version = "0.0.20"
description = "Shop Scout helps you compare and optimize the cost of your personal shopping basket across multiple stores, cities, and countries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "polars>=1.31.0",
    "psycopg[binary]>=3.3.1",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "tomli>=2.2.1",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "isort>=6.0.1",
    "mypy>=1.19.0",
    "polyfactory>=3.0.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py311"]
line-length = 100
color = true

[tool.ruff]
target-version = "py311"
line-length = 100
ignore = ["E501"]
exclude = [
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "migrations",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disable_error_code = ["misc", "call-arg", "attr-defined"]
ignore_missing_imports = true
ignore_errors = false
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    "tests/",
    "test_.*\\.py$"
]
plugins = ["sqlalchemy.ext.mypy.plugin"]
